--- a/tex_to_astro.ipynb
+++ b/tex_to_astro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        " 'Virtual Work']"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,52 +80,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('section', 'subsection')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tex2py import tex2py\n",
+    "\n",
+    "with open('./public/Statics/Trusses.tex', 'r') as file:\n",
+    "    data = tex2py(file.read())\n",
+    "\n",
+    "    print(data.findHierarchy())\n",
+    "    \n",
+    "    sections = list(data.sections)\n",
+    "\n",
+    "    #print(sections)\n",
+    "\n",
+    "    subsections = {section: section.branches for section in sections}\n",
+    "\n",
+    "    #print(subsections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Component 1']\n",
+      "['Vector Bases']\n",
       "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
+      "['Basis Shapes']\n",
       " Nonuniform load. Need to remake this in the same style as the other pictures.\n",
+      "['Equivalent systems']\n",
       " A concentrated force applied to a bar at point A.\n",
       " Example distributed load (top) and its equivalent force system (bottom).\n",
       " Example triangular distributed load (top) and its equivalent force system (bottom).\n",
       " Nonuniform load. Need to remake this in the same style as the other pictures.\n",
+      "['Pulley Idealizations']\n",
       "<BlueText>Taken from TAM 210 Lecture 5 - Slide 6</BlueText>\n",
       "<BlueText>Taken from TAM 210 Lecture 5 - Slide 7. Make this picture and put it next to a stress-strain curve with the straight linear elastic line and the slope as k.</BlueText>\n",
       "<BlueText>Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.</BlueText>\n",
+      "[\\red{Static Friction}, 'Static Friction']\n",
       "<BlueText>Taken from TAM 210 Lecture 26</BlueText>\n",
       "<BlueText>Taken from TAM 210 Lecture 27</BlueText>\n",
+      "['Fluid Pressure']\n",
       " Derivation of the pressure  <InlineEquation equation='P(z)' />  at the bottom of a cylinder of liquid with cross-sectional area  <InlineEquation equation='A' />\n",
       " Derivation of the pressure  <InlineEquation equation='P(z)' />  at the bottom of a cylinder of liquid with cross-sectional area  <InlineEquation equation='A' />\n",
+      "['Sign Conventions']\n",
       " Internal shear force (V), internal normal force (N), and internal moment (M).\n",
       " Sign conventions for internal forces and moments\n",
       "<BlueText>Taken from TAM 210 Lecture 22</BlueText>\n",
       "<BlueText>Taken from TAM 210 Lecture 23</BlueText>\n",
       "<BlueText>See TAM 210 Lecture 25</BlueText>\n",
-      "<BlueText>Taken from TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations)</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
-      " If the bar is pinned at point  <InlineEquation equation='A' /> , the force  <InlineEquation equation='F' /> , applied at a distance  <InlineEquation equation='d' />  from point A, will cause a moment  <InlineEquation equation='M_A' />  about point A and make the bar rotate clockwise.\n",
-      " The moment about point A is dependent on how much of the force  <InlineEquation equation='F' />  is perpendicular to the moment arm  <InlineEquation equation='d' /> .\n",
-      " Positive and negative moment conventions.\n",
-      " A couple moment\n",
-      "<BlueText>Taken from Mariana Kersh's TAM 251 Lecture notes</BlueText>\n",
-      " Examples of different two force members.\n",
-      " Examples of different zero force members, highlighted in red.\n",
-      "<BlueText>Taken from TAM 210 Lecture 17 notes</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 19 notes</BlueText>\n",
-      "<BlueText>Taken from TAM212 Reference Pages (Vectors and Bases)</BlueText>\n",
-      "<BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Don't include the a+b vector - only keep one a and one b vector with their scaled counterparts.</BlueText>\n",
-      "<BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Only include the left part of the figure, and add another part on the right that shows a-b.</BlueText>\n",
-      "<BlueText>Taken from TAM210 Lecture Notes - Slide 3</BlueText>\n",
-      "<BlueText>Taken from TAM210 Lecture Notes - Slide 4</BlueText>\n",
-      " Virtual work  <InlineEquation equation='dU' />  completed by a couple moment,  <InlineEquation equation='M' /> .  \\blue{Need to add a coordinate system to this picture. Taken from lecture 34.}\n",
-      " Principle of virtual work.  \\blue{Taken from lecture 34.}\n",
-      " Analysis procedure for virtual work problems.  \\blue{Taken from lecture 34.}\n"
+      "[\"Newton's Laws\"]\n",
+      "<BlueText>Taken from TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations)</BlueText>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'descendants'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 25\u001b[0m\n\u001b[1;32m     20\u001b[0m                 required_modules\u001b[38;5;241m.\u001b[39mappend(html)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# ADDITIONAL CLEANUP\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m([e \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msubsection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescendants\u001b[49m])\n\u001b[1;32m     28\u001b[0m raw \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mnoindent\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menumerate\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'descendants'"
      ]
     }
    ],
@@ -154,7 +184,7 @@
     "        # ADDITIONAL CLEANUP\n",
     "\n",
     "        \n",
-    "\n",
+    "        print([e for e in data.subsection.descendants])\n",
     "        \n",
     "\n",
     "        raw = raw.replace(r'\\noindent', '')\n",
