--- a/tex_to_astro.ipynb
+++ b/tex_to_astro.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -105,57 +105,24 @@
     "\n",
     "    subsections = {section: section.branches for section in sections}\n",
     "\n",
-    "    #print(subsections)"
+    "    #print(subsections)\n",
+    "\n",
+    "tex_files = ['Moment of Inertia']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Component 1']\n",
-      "['Vector Bases']\n",
+      "['Moment of Inertia (Second Moment of Area)']\n",
       "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
-      "['Basis Shapes']\n",
-      " Nonuniform load. Need to remake this in the same style as the other pictures.\n",
-      "['Equivalent systems']\n",
-      " A concentrated force applied to a bar at point A.\n",
-      " Example distributed load (top) and its equivalent force system (bottom).\n",
-      " Example triangular distributed load (top) and its equivalent force system (bottom).\n",
-      " Nonuniform load. Need to remake this in the same style as the other pictures.\n",
-      "['Pulley Idealizations']\n",
-      "<BlueText>Taken from TAM 210 Lecture 5 - Slide 6</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 5 - Slide 7. Make this picture and put it next to a stress-strain curve with the straight linear elastic line and the slope as k.</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 5 - Slide 8. This could become an interactive image eventually where the angles of the surfaces are changed by the user and then the reaction forces are also changing.</BlueText>\n",
-      "[\\red{Static Friction}, 'Static Friction']\n",
-      "<BlueText>Taken from TAM 210 Lecture 26</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 27</BlueText>\n",
-      "['Fluid Pressure']\n",
-      " Derivation of the pressure  <InlineEquation equation='P(z)' />  at the bottom of a cylinder of liquid with cross-sectional area  <InlineEquation equation='A' />\n",
-      " Derivation of the pressure  <InlineEquation equation='P(z)' />  at the bottom of a cylinder of liquid with cross-sectional area  <InlineEquation equation='A' />\n",
-      "['Sign Conventions']\n",
-      " Internal shear force (V), internal normal force (N), and internal moment (M).\n",
-      " Sign conventions for internal forces and moments\n",
-      "<BlueText>Taken from TAM 210 Lecture 22</BlueText>\n",
-      "<BlueText>Taken from TAM 210 Lecture 23</BlueText>\n",
-      "<BlueText>See TAM 210 Lecture 25</BlueText>\n",
-      "[\"Newton's Laws\"]\n",
-      "<BlueText>Taken from TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations)</BlueText>\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'descendants'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 25\u001b[0m\n\u001b[1;32m     20\u001b[0m                 required_modules\u001b[38;5;241m.\u001b[39mappend(html)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# ADDITIONAL CLEANUP\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m([e \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msubsection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescendants\u001b[49m])\n\u001b[1;32m     28\u001b[0m raw \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mnoindent\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menumerate\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'descendants'"
+      "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n",
+      "<BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText>\n"
      ]
     }
    ],
