Finished migrating  + small tweaks
Migrated 212 pages. Added them to sidebar and Dynamics homepage.

Made some small changes to CSS to add hover effects:
- On course homepage, hovering on a card makes it slightly bigger
- On course homepage in simplified view, hovering on a page makes the title bold to help identifying which one is currently selected
- Dev only, will remove for prod deployment: since some pages have \ref attributes, thought it'd be good if on hover, the name of the image appears, to be able to identify which file \ref refers to

--- a/tex_to_astro.ipynb
+++ b/tex_to_astro.ipynb
@@ -18,26 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Pressure Vessels',\n",
-       " 'Shear Moment Diagrams',\n",
-       " 'Strain',\n",
-       " 'Stress',\n",
-       " 'Stress Transformation',\n",
-       " 'Torsion',\n",
-       " 'Transverse Shear']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "coursetags = {\n",
     "    'Statics': 'sta',\n",
@@ -45,16 +28,19 @@
     "    'Solid_Mechanics': 'sol'\n",
     "}\n",
     "\n",
-    "course = 'Solid_Mechanics'\n",
+    "course = 'Dynamics'\n",
     "\n",
-    "tex_files = list(sorted([file[:-4] for file in os.listdir(f'./public/{course}') if file[-4:] == '.tex']))[7:]\n",
+    "tex_files = list(sorted([file[:-4] for file in os.listdir(f'./public/{course}') if file[-4:] == '.tex' and (file != 'main.tex')]))\n",
     "\n",
-    "tex_files"
+    "tex_files\n",
+    "\n",
+    "if not os.path.exists(f'./src/pages/{coursetags[course]}'):\n",
+    "    os.mkdir(f'./src/pages/{coursetags[course]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +57,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'filena' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m match \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(matches):\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tex \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m---> 19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mstr\u001b[39m(match)[:\u001b[38;5;241m6\u001b[39m], \u001b[43mfilena\u001b[49m,e)\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mlist\u001b[39m(match\u001b[38;5;241m.\u001b[39mcontents)) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;66;03m#print(str(match))\u001b[39;00m\n\u001b[1;32m     23\u001b[0m         \n\u001b[1;32m     24\u001b[0m         \u001b[38;5;66;03m#raw = raw.replace(r\"\\%s{%s}\" % (tex, list(match.contents)[0]), f\"<{html}>{list(match.contents)[0]}</{html}>\")\u001b[39;00m\n\u001b[1;32m     26\u001b[0m         raw \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;28mstr\u001b[39m(match)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mblue \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m<\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhtml\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m>\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mlist\u001b[39m([\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39me\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mmatch\u001b[38;5;241m.\u001b[39mcontents]))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m</\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhtml\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m>\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'filena' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\blue{ Contact and Rolling\n",
+      "\\blue{ Contact and Rolling\n",
+      "\\blue{ Contact and Rolling\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinematics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Particle Kinetics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinematics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Rigid Body Kinetics\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vector Calculus\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Vectors\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n",
+      "\\blue{ Work and Energy\n"
      ]
     }
    ],
@@ -119,7 +159,9 @@
     "        \n",
     "        # ADDITIONAL CLEANUP\n",
     "\n",
-    "        \n",
+    "        raw = raw.replace('<Section>', '<Section title=\"\">')\n",
+    "        raw = raw.replace('<SubSection>', '<SubSection title=\"\">')\n",
+    "        raw = raw.replace('<SubSubSection>', '<SubSubSection title=\"\">')\n",
     "        #print([e for e in data.subsection.descendants])\n",
     "        \n",
     "\n",
@@ -185,6 +227,32 @@
     "        for comp in required_modules:\n",
     "            imports += f'import {comp} from \"../../components/{comp}.astro\" \\n' \n",
     "\n",
+    "        figs = data.find_all('figure')\n",
+    "\n",
+    "        for fig in figs:\n",
+    "            caption = ' '.join([str(e) for e in list(fig.caption.contents)[1:]])\n",
+    "            \n",
+    "            actual_text = caption[6:-1] if caption[0:5] == r'\\blue' else caption\n",
+    "            \n",
+    "            inline_equations = re.findall('\\$([^$]*)\\$', actual_text)\n",
+    "\n",
+    "            for eq in inline_equations:\n",
+    "                db_backslash = eq.replace('\\\\','\\\\\\\\')\n",
+    "                actual_text = actual_text.replace(f'${eq}$', f'<InlineEquation equation=\"{db_backslash}\" />')\n",
+    "\n",
+    "            if caption[0:5] == r'\\blue':\n",
+    "                actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
+    "\n",
+    "            src = list(fig.includegraphics.text)[-1]\n",
+    "            try:\n",
+    "                width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
+    "            except:\n",
+    "                width = '5' \n",
+    "\n",
+    "            #print(actual_text)\n",
+    "\n",
+    "            raw = raw.replace(r'\\end{figure}', f'<Image src=\"/{course}/{src}\" width=\"{width}\">{actual_text}</Image>', 1)\n",
+    "\n",
     "        figs = data.find_all('figure*')\n",
     "\n",
     "        for fig in figs:\n",
@@ -202,7 +270,10 @@
     "                actual_text = f'<BlueText>{actual_text}</BlueText>'\n",
     "\n",
     "            src = list(fig.includegraphics.text)[-1]\n",
-    "            width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
+    "            try:\n",
+    "                width = list(fig.includegraphics.text)[0].split(',')[1].split('=')[1].replace('in', '')\n",
+    "            except:\n",
+    "                width = '5' \n",
     "\n",
     "            #print(actual_text)\n",
     "\n",
