--- a/html_to_astro.ipynb
+++ b/html_to_astro.ipynb
@@ -261,30 +261,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<DisplayEquation equation=\"\\\\vec{a} \\\\cdot \\\\vec{a}^\\\\perp        = (a_1\\\\,\\\\hat\\\\imath + a_2\\\\,\\\\hat\\\\jmath) \\\\cdot        (-a_2\\\\,\\\\hat\\\\imath + a_1\\\\hat\\\\jmath)        = -a_1 a_2 + a_2 a_1 = 0.\" />\n"
-     ]
-    }
-   ],
-   "source": [
-    "e = r\"\"\"\n",
-    "\\vec{a} \\cdot \\vec{a}^\\perp\n",
-    "        = (a_1\\,\\hat\\imath + a_2\\,\\hat\\jmath) \\cdot\n",
-    "        (-a_2\\,\\hat\\imath + a_1\\hat\\jmath)\n",
-    "        = -a_1 a_2 + a_2 a_1 = 0.\n",
-    "\"\"\"\n",
-    "\n",
-    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -292,7 +268,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\\vec{a} \\\\cdot \\\\vec{a}^\\\\perp        = (a_1\\\\,\\\\hat\\\\imath + a_2\\\\,\\\\hat\\\\jmath) \\\\cdot        (-a_2\\\\,\\\\hat\\\\imath + a_1\\\\hat\\\\jmath)        = -a_1 a_2 + a_2 a_1 = 0.\n"
+      "<DisplayEquation equation=\" \\\\begin{aligned} \\\\vec{a} = a\\\\hat{a}\\\\end{aligned}\" />\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = r\"\"\"\n",
+    " \\begin{aligned} \\vec{a} = a\n",
+    "              \\hat{a}\\end{aligned}\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \\\\begin{aligned} \\\\vec{a} = a\\\\hat{a}\\\\end{aligned}\n"
      ]
     }
    ],
