--- a/html_to_astro.ipynb
+++ b/html_to_astro.ipynb
@@ -261,37 +261,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\" \\\\begin{aligned} \\\\vec{a} = a\\\\hat{a}\\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\"\\\\int_0^t a_1(t) \\\\,d\\\\tau= \\\\left[a_1(t) \\\\, \\\\tau\\\\right]_{\\\\tau = 0}^{\\\\tau = t}= a_1(t) \\\\, t,          \\\\]\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    " \\begin{aligned} \\vec{a} = a\n",
-    "              \\hat{a}\\end{aligned}\n",
-    "\n",
+    "\\[\n",
+    "\\int_0^t a_1(t) \\,d\\tau\n",
+    "= \\left[a_1(t) \\, \\tau\\right]_{\\tau = 0}^{\\tau = t}\n",
+    "= a_1(t) \\, t,\n",
+    "          \\]\n",
     "\"\"\"\n",
     "\n",
-    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
+    "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'[\\\\', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \\\\begin{aligned} \\\\vec{a} = a\\\\hat{a}\\\\end{aligned}\n"
+      "\\\\begin{aligned}\\\\vec{r} &amp;= r \\\\,\\\\hat{e}_r \\\\\\\\\\\\vec{v} &amp;= \\\\dot{r} \\\\,\\\\hat{e}_r+ r \\\\dot\\\\theta \\\\sin\\\\phi \\\\,\\\\hat{e}_{\\\\theta}+ r \\\\dot\\\\phi \\\\,\\\\hat{e}_{\\\\phi} \\\\\\\\\\\\vec{a} &amp;= (\\\\ddot{r} - r \\\\dot{\\\\theta}^2 \\\\sin^2\\\\phi- r \\\\dot{\\\\phi}^2) \\\\,\\\\hat{e}_r \\\\\\\\&amp;\\\\quad + (r \\\\ddot\\\\theta \\\\sin\\\\phi+ 2 \\\\dot{r} \\\\dot\\\\theta \\\\sin\\\\phi+ 2 r \\\\dot\\\\theta \\\\dot\\\\phi \\\\cos\\\\phi) \\\\,\\\\hat{e}_{\\\\theta} \\\\\\\\&amp;\\\\quad + (r \\\\ddot\\\\phi + 2 \\\\dot{r} \\\\dot\\\\phi- r \\\\dot{\\\\theta}^2 \\\\sin\\\\phi \\\\cos\\\\phi) \\\\,\\\\hat{e}_{\\\\phi}\\\\end{aligned}\n"
      ]
     }
    ],
@@ -308,10 +310,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<InlineEquation equation=\"\\\\vec{a}(t)\" />\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = r\"\"\"\n",
+    "$\\vec{a}(t)$\n",
+    "\"\"\"\n",
+    "\n",
+    "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<InlineEquation equation=\"\\\\vec{a}(t)\" />"
+   ]
   }
  ],
  "metadata": {
