porting some more

--- a/html_to_astro.ipynb
+++ b/html_to_astro.ipynb
@@ -261,22 +261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"\\\\begin{aligned}x = u, \\\\quad \\\\quad y = y(u) = y(x)\\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\"365.242 \\\\approx 365 + \\\\frac{1}{4} - \\\\frac{1}{100} + \\\\frac{1}{400}.\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\\begin{aligned}\n",
-    "x = u, \\quad \\quad y = y(u) = y(x)\n",
-    "\\end{aligned}\\]\n",
+    "\\[\n",
+    "365.242 \\approx 365 + \\frac{1}{4} - \\frac{1}{100} + \\frac{1}{400}.\n",
+    "\\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -301,20 +301,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\"x'(u) = 1\" />\n"
+      "<InlineEquation equation=\"\\\\omega_{\\\\rm E}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "$x'(u) = 1$\n",
+    "$\\omega_{\\rm E}$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
