Adding proper LateX text (#55)
* moving text to /public dir

* changed text location

--- a/212-text.ipynb
+++ b/212-text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,28 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = json.load(open('./logs/par_kine.har'))['log']['entries']\n",
+    "data = json.load(open('./logs/vec_calc.har'))['log']['entries']\n",
     "\n",
-    "page = 'particle_kinetics'"
+    "page = 'vector_calculus'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "for request in data:\n",
     "    if request['response']['status'] == 404:\n",
     "        filename = request['request']['url'].replace(f'https://www.mechref.org/dyn/{page}/text/', '')\n",
-    "        try:\n",
-    "            shutil.copy(f'./dyn/text/{filename}', f'./public/dyn/{page}/text/{filename}')\n",
-    "        except FileNotFoundError:\n",
-    "            pass"
+    "\n",
+    "        shutil.copy(f'./dyn/text/{filename}', f'./public/dyn/{page}/text/{filename}')"
    ]
   },
   {
