added proper latex text

--- a/212-text.ipynb
+++ b/212-text.ipynb
@@ -2,36 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import shutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import shutil\n",
+    "\n",
     "data = json.load(open('./logs/vec_calc.har'))['log']['entries']\n",
     "\n",
-    "page = 'vector_calculus'"
+    "page = 'vectors'\n",
+    "course = 'dyn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: './dyn/text/https://www.mechref.org/favicon2.png'\n"
+     ]
+    }
+   ],
    "source": [
     "for request in data:\n",
-    "    if request['response']['status'] == 404:\n",
-    "        filename = request['request']['url'].replace(f'https://www.mechref.org/dyn/{page}/text/', '')\n",
-    "\n",
-    "        shutil.copy(f'./dyn/text/{filename}', f'./public/dyn/{page}/text/{filename}')"
+    "    if request['response']['content']['mimeType'] == 'image/png' or request['response']['status'] == 404:\n",
+    "        filename = request['request']['url'].replace(f'https://www.mechref.org/{course}/{page}/text/', '').replace(f'http://localhost:4321/{course}/text/', '')\n",
+    "        try:\n",
+    "            shutil.copy(f'./dyn/text/{filename}', f'./public/{course}/{page}/text/{filename}')\n",
+    "        except FileNotFoundError as e:\n",
+    "            print(e)"
    ]
   },
   {
@@ -58,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
